# vamos

./: .gitignore  CMakeLists.txt  Doxyfile  LICENSE  LICENSE-APACHE  LICENSE-MIT  Makefile.crosscompile  README.md  kmpkg-configuration.json
benchmarks/: CMakeLists.txt  alignment.cpp  benchmark.cpp  stream.cpp  threaded.cpp
cmake/: add_cpp_test.cmake  vamos-config.cmake.in  vamos-flags.cmake
fuzz/: CMakeLists.txt  README.md  base64.cpp  build.sh  conversion.cpp  minimize_and_cleanse.sh  misc.cpp  random_fuzz.sh  roundtrip.cpp
riscv/: README.md
scripts/: release.py  sse_convert_utf16_to_utf8.py
src/: CMakeLists.txt  encoding_types.cpp  error.cpp  implementation.cpp  unicode.cc  unicode_view.cc  vamos.cc
src/arm64/: arm_base64.cpp  arm_convert_latin1_to_utf16.cpp  arm_convert_latin1_to_utf32.cpp  arm_convert_latin1_to_utf8.cpp  arm_convert_utf16_to_latin1.cpp  arm_convert_utf16_to_utf32.cpp  arm_convert_utf16_to_utf8.cpp  arm_convert_utf32_to_latin1.cpp  arm_convert_utf32_to_utf16.cpp  arm_convert_utf32_to_utf8.cpp  arm_convert_utf8_to_latin1.cpp  arm_convert_utf8_to_utf16.cpp  arm_convert_utf8_to_utf32.cpp  arm_validate_utf16.cpp  arm_validate_utf32le.cpp  implementation.cpp
src/fallback/: implementation.cpp
src/generic/: ascii_validation.h  buf_block_reader.h  utf16.h  utf8.h  validate_utf16.h
src/generic/utf8_to_latin1/: utf8_to_latin1.h  valid_utf8_to_latin1.h
src/generic/utf8_to_utf16/: utf8_to_utf16.h  valid_utf8_to_utf16.h
src/generic/utf8_to_utf32/: utf8_to_utf32.h  valid_utf8_to_utf32.h
src/generic/utf8_validation/: utf8_lookup4_algorithm.h  utf8_validator.h
src/haswell/: avx2_base64.cpp  avx2_convert_latin1_to_utf16.cpp  avx2_convert_latin1_to_utf32.cpp  avx2_convert_latin1_to_utf8.cpp  avx2_convert_utf16_to_latin1.cpp  avx2_convert_utf16_to_utf32.cpp  avx2_convert_utf16_to_utf8.cpp  avx2_convert_utf32_to_latin1.cpp  avx2_convert_utf32_to_utf16.cpp  avx2_convert_utf32_to_utf8.cpp  avx2_convert_utf8_to_latin1.cpp  avx2_convert_utf8_to_utf16.cpp  avx2_convert_utf8_to_utf32.cpp  avx2_validate_utf16.cpp  avx2_validate_utf32le.cpp  implementation.cpp
src/icelake/: icelake_ascii_validation.inl.cpp  icelake_base64.inl.cpp  icelake_common.inl.cpp  icelake_convert_latin1_to_utf16.inl.cpp  icelake_convert_latin1_to_utf32.inl.cpp  icelake_convert_latin1_to_utf8.inl.cpp  icelake_convert_utf16_to_latin1.inl.cpp  icelake_convert_utf16_to_utf32.inl.cpp  icelake_convert_utf16_to_utf8.inl.cpp  icelake_convert_utf32_to_latin1.inl.cpp  icelake_convert_utf32_to_utf16.inl.cpp  icelake_convert_utf32_to_utf8.inl.cpp  icelake_convert_utf8_to_latin1.inl.cpp  icelake_convert_utf8_to_utf16.inl.cpp  icelake_convert_valid_utf8_to_latin1.inl.cpp  icelake_from_utf8.inl.cpp  icelake_from_valid_utf8.inl.cpp  icelake_macros.inl.cpp  icelake_utf32_validation.inl.cpp  icelake_utf8_common.inl.cpp  icelake_utf8_validation.inl.cpp  implementation.cpp
src/lasx/: implementation.cpp  lasx_base64.cpp  lasx_convert_latin1_to_utf16.cpp  lasx_convert_latin1_to_utf32.cpp  lasx_convert_latin1_to_utf8.cpp  lasx_convert_utf16_to_latin1.cpp  lasx_convert_utf16_to_utf32.cpp  lasx_convert_utf16_to_utf8.cpp  lasx_convert_utf32_to_latin1.cpp  lasx_convert_utf32_to_utf16.cpp  lasx_convert_utf32_to_utf8.cpp  lasx_convert_utf8_to_latin1.cpp  lasx_convert_utf8_to_utf16.cpp  lasx_convert_utf8_to_utf32.cpp  lasx_validate_utf16.cpp  lasx_validate_utf32le.cpp
src/lsx/: implementation.cpp  lsx_base64.cpp  lsx_convert_latin1_to_utf16.cpp  lsx_convert_latin1_to_utf32.cpp  lsx_convert_latin1_to_utf8.cpp  lsx_convert_utf16_to_latin1.cpp  lsx_convert_utf16_to_utf32.cpp  lsx_convert_utf16_to_utf8.cpp  lsx_convert_utf32_to_latin1.cpp  lsx_convert_utf32_to_utf16.cpp  lsx_convert_utf32_to_utf8.cpp  lsx_convert_utf8_to_latin1.cpp  lsx_convert_utf8_to_utf16.cpp  lsx_convert_utf8_to_utf32.cpp  lsx_validate_utf16.cpp  lsx_validate_utf32le.cpp
src/ppc64/: implementation.cpp
src/rvv/: implementation.cpp  rvv_helpers.inl.cpp  rvv_latin1_to.inl.cpp  rvv_length_from.inl.cpp  rvv_utf16_to.inl.cpp  rvv_utf32_to.inl.cpp  rvv_utf8_to.inl.cpp  rvv_validate.inl.cpp
src/scalar/: ascii.h  base64.h  latin1.h  swap_bytes.h  utf16.h  utf32.h  utf8.h
src/scalar/latin1_to_utf16/: latin1_to_utf16.h
src/scalar/latin1_to_utf32/: latin1_to_utf32.h
src/scalar/latin1_to_utf8/: latin1_to_utf8.h
src/scalar/utf16_to_latin1/: utf16_to_latin1.h  valid_utf16_to_latin1.h
src/scalar/utf16_to_utf32/: utf16_to_utf32.h  valid_utf16_to_utf32.h
src/scalar/utf16_to_utf8/: utf16_to_utf8.h  valid_utf16_to_utf8.h
src/scalar/utf32_to_latin1/: utf32_to_latin1.h  valid_utf32_to_latin1.h
src/scalar/utf32_to_utf16/: utf32_to_utf16.h  valid_utf32_to_utf16.h
src/scalar/utf32_to_utf8/: utf32_to_utf8.h  valid_utf32_to_utf8.h
src/scalar/utf8_to_latin1/: utf8_to_latin1.h  valid_utf8_to_latin1.h
src/scalar/utf8_to_utf16/: utf8_to_utf16.h  valid_utf8_to_utf16.h
src/scalar/utf8_to_utf32/: utf8_to_utf32.h  valid_utf8_to_utf32.h
src/unicodelib/: uchar_util.cc  unicode_ctype.cc  unicode_data.cc  unicode_data_db.h  unicode_name_db.h  unicode_normal_form.cc  unicode_ops.cc  unicodetype_db.h
src/westmere/: implementation.cpp  sse_base64.cpp  sse_convert_utf16_to_utf8.cpp  sse_convert_utf32_to_utf8.cpp
src/westmere/internal/: write_v_u16_11bits_to_utf8.cpp
tests/: CMakeLists.txt  atomic_base64_tests.cc  base64_tests.cc  basic_fuzzer.cc  bele_tests.cc  (+70 more)
tests/helpers/: CMakeLists.txt  random_int.cc  random_int.h  random_utf16.cc  random_utf16.h  random_utf32.cc  random_utf32.h  random_utf8.cc  random_utf8.h  test.cc  test.h  transcode_test_base.cc  transcode_test_base.h
tests/reference/: CMakeLists.txt  decode_utf16.h  decode_utf32.h  encode_latin1.cc  encode_latin1.h  encode_utf16.cc  encode_utf16.h  encode_utf32.cc  encode_utf32.h  encode_utf8.cc  encode_utf8.h  validate_utf16.cc  validate_utf16.h  validate_utf16_to_latin1.cc  validate_utf16_to_latin1.h  validate_utf32.cc  validate_utf32.h  validate_utf32_to_latin1.cc  validate_utf32_to_latin1.h  validate_utf8.cc  validate_utf8.h  validate_utf8_to_latin1.cc  validate_utf8_to_latin1.h
(+104 files in other folders)
